--- a/styles/style.css
+++ b/styles/style.css
@@ -8,13 +8,13 @@
 
 @font-face {
 	font-family: Roboto;
-	src: url(./assets/fonts/Roboto-Regular.ttf);
+	src: url(../assets/fonts/Roboto-Regular.ttf);
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: Roboto;
-	src: url(./assets/fonts/Roboto-Bold.ttf);
+	src: url(../assets/fonts/Roboto-Bold.ttf);
 	font-weight: 700;
 }
 
